# Purple-Team-Attack-Simulator

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SAFETY.md  SUIVI_PROJET.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes_detections.py  routes_health.py  routes_reports.py  routes_runs.py  routes_scenarios.py
backend/app/cli/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  alert.py  detection.py  log_event.py  run.py  scenario.py
backend/app/schemas/: detection.py  log_event.py  report.py  run.py  scenario.py
backend/app/services/: coverage_calculator.py  detection_engine.py  mitre_mapper.py  report_generator.py  scenario_loader.py  scenario_runner.py  synthetic_log_generator.py
backend/rules/: abnormal_login_time_rule.yml  dns_exfil_pattern_rule.yml  new_admin_user_rule.yml  process_masquerading_rule.yml  scheduled_task_rule.yml  ssh_bruteforce_rule.yml  suspicious_curl_rule.yml  suspicious_powershell_rule.yml  temp_process_rule.yml  webshell_like_request_rule.yml
backend/sample_data/: sample_logs.jsonl
backend/scenarios/: abnormal_login_time.yml  dns_exfil_pattern.yml  new_admin_user.yml  process_masquerading.yml  scheduled_task_creation.yml  ssh_bruteforce.yml  suspicious_curl_download.yml  suspicious_powershell.yml  temp_process_execution.yml  webshell_like_request.yml
backend/tests/: conftest.py  test_api.py  test_detection_engine.py  test_report_generator.py  test_scenario_loader.py  test_scenario_runner.py
(+28 files in other folders)
